# Cleric-AI-Engineer-Assignment-V2

./: .gitignore  Procfile  README.md  app.py  prompt.txt  pyproject.toml  requirements.txt  streamlit.py  task.py  test.py
test/unit/: test_cache.py  test_gpt4.py
utils/: __init__.py  cache.py  gpt4.py  process_requests.py  requests.py  response.py
